--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "headlessui": "^0.0.0",
     "html2canvas": "^1.4.1",
     "i18next": "^23.0.0",
-    "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.8.4",
+    "jspdf": "^3.0.2",
+    "jspdf-autotable": "^5.0.2",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -32,9 +32,13 @@
     "@types/node": "^24.0.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^4.0.1",
+    "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.14",
     "d3-dsv": "^3.0.1",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "depcheck": "^1.4.7",
     "eslint": "^8.47.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.1",
@@ -42,6 +46,6 @@
     "postcss": "^8.4.21",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.0.4",
-    "vite": "^4.4.9"
+    "vite": "^7.0.4"
   }
 }
